[gd_scene load_steps=10 format=2]

[ext_resource path="res://Bullet/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Shared/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bullet/EnemyBullet.gd" type="Script" id=3]
[ext_resource path="res://Bullet/HitEffect.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 50.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 2.07671

[sub_resource type="CircleShape2D" id=4]
radius = 2.11042

[node name="EnemyBullet" type="KinematicBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
hit_effect = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
